# swagger/swagger-output.json
@@ -12,6 +12,149 @@
     "http"
   ],
   "paths": {
+    "/api/users": {
+      "get": {
+        "summary": "홈 화면",
+        "description": "홈 화면 API",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "category_items": {
+                  "type": "array",
+                  "items": {
+                    "properties": {
+                      "user_id": {
+                        "type": "number",
+                        "description": "유저 PK"
+                      },
+                      "username": {
+                        "type": "string",
+                        "description": "닉네임"
+                      },
+                      "kakao_talk_chatting_url": {
+                        "type": "string",
+                        "description": "채팅 URL"
+                      },
+                      "item_id": {
+                        "type": "number",
+                        "description": "아이템 PK"
+                      },
+                      "item_type": {
+                        "type": "string",
+                        "description": "상품이 내꺼인지 상대꺼 인지"
+                      },
+                      "category": {
+                        "type": "string",
+                        "description": "상품 카테고리"
+                      },
+                      "trade_status": {
+                        "type": "string",
+                        "description": "상품 상"
+                      },
+                      "name": {
+                        "type": "string",
+                        "description": "상품 이름"
+                      },
+                      "img_name": {
+                        "type": "string",
+                        "description": "이미지 이름"
+                      },
+                      "img_url": {
+                        "type": "string",
+                        "description": "이미지 URL"
+                      }
+                    }
+                  }
+                },
+                "experience_items": {
+                  "type": "array",
+                  "items": {
+                    "properties": {
+                      "user_id": {
+                        "type": "number",
+                        "description": "유저 PK"
+                      },
+                      "username": {
+                        "type": "string",
+                        "description": "닉네임"
+                      },
+                      "kakao_talk_chatting_url": {
+                        "type": "string",
+                        "description": "채팅 URL"
+                      },
+                      "item_id": {
+                        "type": "number",
+                        "description": "아이템 PK"
+                      },
+                      "item_type": {
+                        "type": "string",
+                        "description": "상품이 내꺼인지 상대꺼 인지"
+                      },
+                      "category": {
+                        "type": "string",
+                        "description": "상품 카테고리"
+                      },
+                      "trade_status": {
+                        "type": "string",
+                        "description": "상품 상"
+                      },
+                      "name": {
+                        "type": "string",
+                        "description": "상품 이름"
+                      },
+                      "img_name": {
+                        "type": "string",
+                        "description": "이미지 이름"
+                      },
+                      "img_url": {
+                        "type": "string",
+                        "description": "이미지 URL"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "요청 파라미터가 부족합니다",
+            "schema": {
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "요청 파라미터가 부족합니다"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "페이지를 찾을 수 없습니다",
+            "schema": {
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "페이지를 찾을 수 없습니다"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "서버 내부 오류입니다",
+            "schema": {
+              "properties": {
+                "message": {
+                  "type": "string",
+                  "example": "서버 내부 오류입니다"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/users/sign-in": {
       "post": {
         "summary": "로그인",
